--- a/gsap/styles.css
+++ b/gsap/styles.css
@@ -31,7 +31,7 @@ header{
     padding: 1rem 0;
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 90%;
     z-index: 1000;
     display: flex;
     justify-content: center;
@@ -586,5 +586,19 @@ footer li{
         
     } 
 
+}
+@media (max-width: 500px) {
+    
+        .section2 .images_container .sample_works  img{
+    
+            width: 300px;
+            height: 500px;
+            object-fit: cover;
+            border-radius: 0px;
+        } 
+        .section4 .works .workcard{
+            width: 300px;
+            margin-bottom: 40px;
+        }  
 }
 
